--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bakhtiyor Abdunazarov</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href=styles.css">
     <link rel="icon" href="favicon4.ico">
     <!---https://fonts.google.com/specimen/Montserrat?query=mon***** 3 links below for front size --->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,16 +15,16 @@
   <body>
 
     <div class="top-container">
-      <img class="top-cloud" src="image/cloud.png" alt="cloud.png">
+      <img class="top-cloud" src="cloud.png" alt="cloud.png">
       <h1>I am Bakhtiyor</h1>
       <h2>a web <span class="dev">dev</span>eloper</h2>
-      <img class="bottom-cloud" src="image/cloud.png" alt="cloud.png">
-      <img src="image/mountain.png" alt="mountain.png">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud.png">
+      <img src="mountain.png" alt="mountain.png">
 
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="bakhtiyor" src="image/programmer.png" alt="profile.picture">
+        <img class="bakhtiyor" src="programmer.png" alt="profile.picture">
         <h2>Hello.</h2>
         <p>My name is Bakhtiyor. I am a Full Stuck Developer. I ❤ learning new things.</p>
       </div>
@@ -32,12 +32,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="code" src="image/coding.png" alt="coding.png">
+          <img class="code" src="coding.png" alt="coding.png">
           <h3>Front End & Back End Developer</h3>
           <p>I am a Middle Full Stuck Developer with 3 years of professional experience. </p>
         </div>
         <div class="skill-row">
-          <img class="goal" src="image/goal.png" alt="goal.ong">
+          <img class="goal" src="goal.png" alt="goal.ong">
           <h3>My Career Goal</h3>
           <p>I would like to join to international company that will help me level up in my professional career moves.</p>
         </div>
