--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bakhtiyor Abdunazarov</title>
-    <link rel="stylesheet" href=styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon4.ico">
     <!---https://fonts.google.com/specimen/Montserrat?query=mon***** 3 links below for front size --->
     <link rel="preconnect" href="https://fonts.googleapis.com">
